--- a/main.css
+++ b/main.css
@@ -87,28 +87,28 @@ p {
     font: normal normal normal 14px/14px Nunito;
     letter-spacing: 1.4px;
 }
-.footer-ul{
+.footer-ul {
     font: normal normal normal 14px/22px Nunito;
     letter-spacing: 0px;
-    color: #000F14;
+    color: #000f14;
 }
 
-.footer-links{
+.footer-links {
     font: normal normal normal 14px/24px Nunito;
     letter-spacing: 0px;
     color: #888888;
 }
 
-.footer-media-title{
+.footer-media-title {
     font: normal normal normal 14px/22px Nunito;
     letter-spacing: 1.4px;
     color: #888888;
 }
 
-.footer-media-text{
+.footer-media-text {
     font: normal normal normal 19px/29px Nunito;
     letter-spacing: 0px;
-    color: #000F14;
+    color: #000f14;
 }
 
 @media screen and (max-width: 600px) {
