--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #FCFBF9;
+}
+
 p {
     padding: 0px;
     margin: 0px;
@@ -127,13 +131,46 @@ header {
 }
 
 /*
+    PARTNERS
+/////////////////////////////*/
+.partner{
+    margin-top: 23%;
+    /* border: 2px solid red; */
+}
+
+.partner-box{
+    /* border: 2px solid orange; */
+    width: 176px;
+    height: 112px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 12px;
+}
+
+.partner-text-kaspersky{
+    font: normal normal bold 16px/29px Nunito;
+    letter-spacing: 0px;
+    color: #57CABC;
+}
+
+.partner-text-pimec{
+    font: normal normal bold 22px/26px Nunito;
+    letter-spacing: 0px;
+    color: #494E6A;
+}
+
+.partner-text-upc{
+    font: normal normal bold 26px/26px Nunito;
+    letter-spacing: 0px;
+    color: #3C7FAF;
+}
+
+/*
  FOTER
 /////////////////////////*/
 
 .footer {
-    /* background-color: aliceblue; */
-    /* height: 300px; */
-    /* border: 2px solid red; */
+    /* border: 1px solid grey; */
     max-width: 95%;
 }
 
