--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
-body{
+body {
     background-color: #FCFBF9 !important;
 }
 
-h1{
+h1 {
     font: normal normal normal 50px/60px Times New Roman !important;
     letter-spacing: 0px;
     color: #000F14;
@@ -31,7 +31,7 @@ h4 {
 
 h5 {
     /* text-align: center; */
-    font: normal normal normal 10px/14px Nunito;
+    font: normal normal normal 10px/14px Nunito !important;
     letter-spacing: 0px;
 }
 
